--- a/resources/sass/profile.scss
+++ b/resources/sass/profile.scss
@@ -14,8 +14,8 @@ body{
   color: #fff !important;
 }
 
-.navbar-link {
-  color: #fff !important;
+.nav-link {
+  color: #fff !important ;
 }
 
 .table-dark{
